force-app/main/default/objects/Policy_Master__c/Policy_Master__c.object-meta.xml
<CustomObject>
    <label>Policy Master</label>
    <pluralLabel>Policy Masters</pluralLabel>
    <nameField>
        <label>Policy Number</label>
        <type>AutoNumber</type>
        <displayFormat>PM-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Represents an insurance policy contract held by an Account (policyholder). Parent of Claim records via Master-Detail.</description>
</CustomObject>