force-app/main/default/objects/Policy_Master__c/fields/Coverage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Limit__c</fullName>
    <label>Coverage Limit</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Maximum total amount the policy will pay out. Individual claims may not exceed this limit (enforced by validation rule on Claim).</description>
</CustomField>