force-app/main/default/objects/Policy_Master__c/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <type>Lookup</type>
    <referenceTo>Coverage_Type__c</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <description>The coverage product this policy is based on. Restrict delete so a coverage type in use cannot be removed.</description>
</CustomField>