force-app/main/default/objects/Policy_Master__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
    <required>true</required>
    <description>Date the policy coverage ends. Must be after Start Date (enforced by validation rule).</description>
</CustomField>