force-app/main/default/objects/Policy_Master__c/fields/Policyholder__c.field-meta.xml
<CustomField>
    <fullName>Policyholder__c</fullName>
    <label>Policyholder</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
    <description>The Account that owns this policy. Restrict delete so an Account with policies cannot be deleted.</description>
</CustomField>