force-app/main/default/objects/Policy_Master__c/fields/Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount__c</fullName>
    <label>Premium Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <required>true</required>
    <description>The recurring premium the policyholder pays for this policy.</description>
</CustomField>