force-app/main/default/objects/Policy_Master__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <label>Primary Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The individual Contact at the policyholder Account who is the main point of contact for this policy.</description>
</CustomField>