force-app/main/default/objects/Policy_Master__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <required>true</required>
    <description>Date the policy coverage begins.</description>
</CustomField>