force-app/main/default/objects/Policy_Master__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Lifecycle status of the policy. Updated automatically by record-triggered flows (e.g. set to Under Claim Review when a claim is approved).</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Under Claim Review</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>