force-app/main/default/objects/Policy_Master__c/fields/Total_Claims__c.field-meta.xml
<CustomField>
    <fullName>Total_Claims__c</fullName>
    <label>Total Claims</label>
    <type>Summary</type>
    <summaryForeignKey>Insurance_Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <description>Roll-up summary: number of claims filed against this policy.</description>
</CustomField>