force-app/main/default/objects/Policy_Master__c/fields/Total_Claims_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Claims_Amount__c</fullName>
    <label>Total Claims Amount</label>
    <type>Summary</type>
    <summarizedField>Insurance_Claim__c.Claim_Amount__c</summarizedField>
    <summaryForeignKey>Insurance_Claim__c.Policy__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <description>Roll-up summary: total amount claimed against this policy across all claims.</description>
</CustomField>