force-app/main/default/objects/Policy_Master__c/validationRules/End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start_Date</fullName>
    <active>true</active>
    <description>A policy coverage period must be valid: the End Date has to fall after the Start Date.</description>
    <errorConditionFormula>End_Date__c &lt;= Start_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be after Start Date.</errorMessage>
</ValidationRule>